# detection_fissures

./: .gitignore  .replit  GUIDE_ENTRAINEMENT.md  README.md  analyser.py  colab_entrainement.ipynb  entrainer.py  entrainer_yolo.py  main.py  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  dataset-roboflow.md
analyse/: __init__.py  classificateur_fissures.py
configuration/: __init__.py  parametres.py
detection_fissures/: __init__.py  analyser.py  entrainer.py  entrainer_yolo.py
documentation/: guide_colab.md  guide_entrainement.md  guide_geometrie.md  guide_kaggle.md  guide_local_uv.md  guide_masks.md  guide_orientation.md
donnees/: __init__.py  chargeur.py  conversion_yolo.py  jeu_donnees_coco.py
entrainement/: __init__.py  entraineur.py  metriques.py  pertes.py
modeles/: __init__.py  masque_rcnn.py
tests/: test_package_and_dataset.py
utilitaires/: __init__.py  ajouter_images_saines.py  convertir_dataset_640.py  dispositif.py  graine.py  images.py
